; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/freetype/src/otvalid/extr_otvmath.c_otv_GlyphAssembly_validate.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/freetype/src/otvalid/extr_otvmath.c_otv_GlyphAssembly_validate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@DeviceTableOffset = common dso_local global i32 0, align 4
@FT_INVALID_GLYPH_ID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.TYPE_4__*)* @otv_GlyphAssembly_validate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @otv_GlyphAssembly_validate(i32 %0, %struct.TYPE_4__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %4, align 8
  %10 = load i32, i32* %3, align 4
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* @DeviceTableOffset, align 4
  %12 = call i32 @OTV_OPTIONAL_TABLE(i32 %11)
  %13 = call i32 @OTV_LIMIT_CHECK(i32 6)
  %14 = load i32, i32* %5, align 4
  %15 = add nsw i32 %14, 2
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* @DeviceTableOffset, align 4
  %17 = call i32 @OTV_OPTIONAL_OFFSET(i32 %16)
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @FT_NEXT_USHORT(i32 %18)
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  %21 = mul nsw i32 8, %20
  %22 = call i32 @OTV_LIMIT_CHECK(i32 %21)
  %23 = load i32, i32* %6, align 4
  %24 = mul nsw i32 8, %23
  %25 = add nsw i32 6, %24
  store i32 %25, i32* %7, align 4
  %26 = load i32, i32* @DeviceTableOffset, align 4
  %27 = call i32 @OTV_SIZE_CHECK(i32 %26)
  %28 = load i32, i32* @DeviceTableOffset, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %36

30:                                               ; preds = %2
  %31 = load i32, i32* %3, align 4
  %32 = load i32, i32* @DeviceTableOffset, align 4
  %33 = add nsw i32 %31, %32
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %35 = call i32 @otv_Device_validate(i32 %33, %struct.TYPE_4__* %34)
  br label %36

36:                                               ; preds = %30, %2
  store i32 0, i32* %8, align 4
  br label %37

37:                                               ; preds = %54, %36
  %38 = load i32, i32* %8, align 4
  %39 = load i32, i32* %6, align 4
  %40 = icmp slt i32 %38, %39
  br i1 %40, label %41, label %57

41:                                               ; preds = %37
  %42 = load i32, i32* %5, align 4
  %43 = call i32 @FT_NEXT_USHORT(i32 %42)
  store i32 %43, i32* %9, align 4
  %44 = load i32, i32* %9, align 4
  %45 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %46 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = icmp sge i32 %44, %47
  br i1 %48, label %49, label %51

49:                                               ; preds = %41
  %50 = load i32, i32* @FT_INVALID_GLYPH_ID, align 4
  br label %51

51:                                               ; preds = %49, %41
  %52 = load i32, i32* %5, align 4
  %53 = add nsw i32 %52, 8
  store i32 %53, i32* %5, align 4
  br label %54

54:                                               ; preds = %51
  %55 = load i32, i32* %8, align 4
  %56 = add nsw i32 %55, 1
  store i32 %56, i32* %8, align 4
  br label %37

57:                                               ; preds = %37
  ret void
}

declare dso_local i32 @OTV_OPTIONAL_TABLE(i32) #1

declare dso_local i32 @OTV_LIMIT_CHECK(i32) #1

declare dso_local i32 @OTV_OPTIONAL_OFFSET(i32) #1

declare dso_local i32 @FT_NEXT_USHORT(i32) #1

declare dso_local i32 @OTV_SIZE_CHECK(i32) #1

declare dso_local i32 @otv_Device_validate(i32, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
